<resources>
    <string name="app_name">BancoUTN</string>
    <string name="textViewNombre">Nombre</string>
    <string-array name="datos">
        <item>Pesos</item>
        <item>Dolares</item>
        <item>Euros</item>
        <item>Reales</item>
    </string-array>
    <string name="textViewTitulo">Constituir plazo fijo</string>
    <string name="textViewDatos">Para constituir tu plazo fijo necesitamos que nos proveas algunos datos.</string>
    <string name="textViewTasaNominal">Tasa Nominal Anual</string>
    <string name="textViewTasaEfectiva">Tasa Efectiva Anual</string>
    <string name="textViewCapitalAInvertir">Capital a Invertir($)</string>
    <string name="textViewPlazo">Plazo: </string>
    <string name="textViewSimulador">Simulador de Plazo Fijo en Pesos:</string>
    <string name="textViewPlazoSim">Plazo: </string>
    <string name="textViewCapital">Capital: </string>
    <string name="textViewInteresesG">Intereses Ganados: </string>
    <string name="textViewMontoTotal">Monto Total: $ </string>
    <string name="textViewMontoTotalAnual">Monto Total Anual: $ </string>
    <string name="buttonConfirmar">CONFIRMAR</string>


</resources>