<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/textViewTasaNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textViewTasaNominal"
            android:textColor="@color/labelColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTasaNominal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="0"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/editTextHintColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/textViewTasaEfectiva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textViewTasaEfectiva"
            android:textColor="@color/labelColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTasaEfectiva"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="0"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/editTextHintColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/textViewCapital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textViewCapitalAInvertir"
            android:textColor="@color/labelColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextCapital"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="0"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/editTextHintColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <SeekBar
            android:id="@+id/seekBarPlazo"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:max="36"
            android:progress="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPlazo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewPlazo"
                android:textColor="@color/labelColor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/editTextColor" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewLabelSimulador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewSimulador"
            android:textAlignment="center"
            android:textColor="@color/labelColor"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSimPlazo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/textViewPlazo" />

            <TextView
                android:id="@+id/textViewSimPlazoValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSimCapital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewCapital"
                android:paddingLeft="10dp" />

            <TextView
                android:id="@+id/textViewSimCapitalValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSimInteresesG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewInteresesG"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/textViewSimInteresesGValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSimMontoTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewMontoTotal"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/textViewSimMontoTotalValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSimMontoTotalAnual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewMontoTotalAnual"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/textViewSimMontoTotalAnualValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonConfirmar" />
</LinearLayout>